[workspace]
members = [".", "worker"]
resolver = "2"

[package]
name = "agentexport"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
flate2 = "1"
hex = "0.4"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
walkdir = "2"
time = { version = "0.3", features = ["formatting", "local-offset", "serde", "serde-human-readable"] }

# Encryption and upload
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"
ureq = { version = "2", features = ["json"] }

[dev-dependencies]
tempfile = "3"
